# longform

./: .gitignore  Makefile  circle.yml  manage.py  package-lock.json  package.json  pytest.ini  readme.md  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
js/: single-eq.js
longform/: __init__.py  apps.py  fields.py  helpers.py  longform_samples.py
longform/tests/: test_longformfield.py  test_process_text.py  utils.py
longform/tests/examples/: mj_emc_test.html  mj_x2.html
testsapp/: settings.py  urls.py  wsgi.py
testsapp/foo/: apps.py  models.py
testsapp/foo/migrations/: 0001_initial.py
