[metadata]
name=longform
version=master
author=

[flake8]
application-import-names = longform
exclude = longform/longform_samples.py, venv, env, build, testsapp, manage.py
ignore = D100,D101,D102,D103,D104,D105,D106,D107,D205,D400,D401,F999
import-order-style = smarkets

[bdist_wheel]
universal = 1
